# msg_data_extractor

./: .gitignore  README.md  extract_msg_photos.py  process_folder.bat  process_folder.sh  pyproject.toml  requirements.txt  setup_local.bat  setup_local.sh  streamlit_app.py
msg_data_extractor/: __init__.py  bundle.py  cli.py  extractor.py  ole2.py  reporting.py  webapp.py
