[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msg-data-extractor"
version = "0.1.0"
description = "Extract photo attachments and contact data from Outlook MSG files."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openpyxl>=3.1",
]

[project.scripts]
msg-data-extractor = "msg_data_extractor.cli:main"

[tool.setuptools]
packages = ["msg_data_extractor"]
